--- a/crewai_agents/.github/workflows/pytest.yml
+++ b/crewai_agents/.github/workflows/pytest.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          if [ -f analysis_agents/Crewai_agents/requirements.txt ]; then pip install -r analysis_agents/Crewai_agents/requirements.txt; fi
           pip install pytest
 
       - name: Run tests
